# rulebook-ai

./: .gitignore  README.md  pyproject.toml  run.sh
api/: deps.py  main.py  models.py  utils.py
app/: streamlit_app.py
docs/: HOW_IT_WORKS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: bootstrap.py  build_apothecaria_data.py  build_dnd5e_curated.py  build_outgunned_roles.py  build_whispers_curated.py  check_ollama.py  ci_validate.sh  eval_retrieval.py  extract_apothecaria_tables.py  extract_brambletrek_2_pdf.py  validate_apothecaria_curated.py  validate_apothecaria_lonelog.py  validate_ashes_curated.py  validate_ashes_lonelog.py  validate_brambletrek_2_curated.py  validate_brambletrek_2_lonelog.py  validate_brambletrek_curated.py  validate_brambletrek_lonelog.py  validate_colostle_curated.py  validate_colostle_lonelog.py  validate_coriolis_curated.py  validate_coriolis_lonelog.py  validate_cosmere_curated.py  validate_cosmere_lonelog.py  validate_dnd5e_character.py  validate_dnd5e_curated.py  validate_dnd5e_lonelog.py  validate_gm_solo_dice.py  validate_how_to_play.py  validate_lighthouse_curated.py  validate_lighthouse_lonelog.py  validate_mlp_curated.py  validate_mlp_lonelog.py  validate_outgunned_curated.py  validate_outgunned_lonelog.py  validate_outgunned_rules.py  validate_play_tools.py  validate_sansibilia_curated.py  validate_sansibilia_lonelog.py  validate_shortcuts.py  (+5 more)
src/: __init__.py  agent.py  brambletrek_actions.py  brambletrek_character.py  brambletrek_curated.py  chat_history.py  config.py  ingest.py  (+10 more)
(+439 files in other folders)
